@@ -131,23 +131,20 @@ public class RandomFirstSpawn extends BaseFeature {
             return;
         }
 
-        World targetWorld = world;
-        WorldRule rule = worldRules.get(targetWorld.getName().toLowerCase(Locale.ROOT));
+        WorldRule rule = worldRules.get(world.getName().toLowerCase(Locale.ROOT));
 
         if (rule == null) {
             return;
         }
 
-        World finalTargetWorld = targetWorld;
-        WorldRule finalRule = rule;
-        api.tasks().runLater(delayTicks, () -> applyRandomSpawn(player, finalTargetWorld, finalRule));
+        api.tasks().runLater(delayTicks, () -> applyRandomSpawn(player, world, rule));
     }
 
     private void applyRandomSpawn(Player player, World world, WorldRule rule) {
         if (!player.isOnline()) {
             return;
         }
-        if (player.getWorld() == null || !player.getWorld().getName().equalsIgnoreCase(world.getName())) {
+        if (!player.getWorld().getName().equalsIgnoreCase(world.getName())) {
             return;
         }
 
@@ -177,10 +174,6 @@ public class RandomFirstSpawn extends BaseFeature {
 
         Player player = event.getPlayer();
         World deathWorld = player.getWorld();
-        if (deathWorld == null) {
-            return;
-        }
-
         String forceSpawn = api.worlds().getSetting(deathWorld, "force-spawn-on-death");
         if ("true".equalsIgnoreCase(forceSpawn)) {
             return;
@@ -205,8 +198,8 @@ public class RandomFirstSpawn extends BaseFeature {
         int centerZ = center.getBlockZ();
         ThreadLocalRandom random = ThreadLocalRandom.current();
 
-        int minRadius = Math.max(0, Math.min(rule.minRadius(), rule.maxRadius()));
-        int maxRadius = Math.max(minRadius, rule.maxRadius());
+        int maxRadius = Math.max(0, rule.maxRadius());
+        int minRadius = Math.clamp(rule.minRadius(), 0, maxRadius);
 
         for (int i = 0; i < Math.max(1, rule.attempts()); i++) {
             double angle = random.nextDouble(0.0, Math.PI * 2.0);
@@ -293,10 +286,6 @@ public class RandomFirstSpawn extends BaseFeature {
 
     private boolean isInsideWorldBorder(World world, int x, int z, int buffer) {
         WorldBorder border = world.getWorldBorder();
-        if (border == null) {
-            return true;
-        }
-
         double half = (border.getSize() / 2.0) - Math.max(0, buffer);
         if (half <= 0.0) {
             return false;
@@ -368,7 +357,7 @@ public class RandomFirstSpawn extends BaseFeature {
             }
 
             String normalized = item.trim().toLowerCase(Locale.ROOT);
-            Biome biome = Registry.BIOME.get(NamespacedKey.minecraft(normalized));
+            Biome biome = resolveBiome(normalized);
             if (biome == null) {
                 api.messages().warn("RANDOM_FIRST_SPAWN_INVALID_BIOME", "biome", item, "world", worldName);
                 continue;
@@ -377,6 +366,11 @@ public class RandomFirstSpawn extends BaseFeature {
             out.add(biome);
         }
         return out;
+    }
+
+    @SuppressWarnings("deprecation")
+    private Biome resolveBiome(String normalized) {
+        return Registry.BIOME.get(NamespacedKey.minecraft(normalized));
     }
 
     private Set<Material> parseMaterials(List<String> raw, String worldName) {
