@@ -10,7 +10,6 @@ import dev.stemcraft.api.model.SCRegion;
 import dev.stemcraft.api.service.region.RegionListener;
 import dev.stemcraft.api.util.NamespaceId;
 import dev.stemcraft.api.util.PlayerUtil;
-import org.bukkit.Bukkit;
 import org.bukkit.GameMode;
 import org.bukkit.Location;
 import org.bukkit.Material;
@@ -109,7 +108,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
 
     @Override
     public void onArenaLoad(MiniGameArena arena) {
-        arena.getOrCreate("blocks", Set.class, HashSet::new);
+        placedBlocks(arena);
         arena.getOrCreate("eliminatedSpectators", Set.class, LinkedHashSet::new);
         arena.getOrCreate("trackedEntities", Set.class, HashSet::new);
         arena.getOrCreate("dropSurfaces", List.class, ArrayList::new);
@@ -150,7 +149,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
             return HandlerEventResult.DENY;
         }
 
-        arena.getOrCreate("blocks", Set.class, HashSet::new).add(block.getLocation());
+        placedBlocks(arena).add(block.getLocation());
         return HandlerEventResult.ALLOW;
     }
 
@@ -160,7 +159,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
             return HandlerEventResult.DENY;
         }
 
-        Set<Location> blockLocations = arena.getOrCreate("blocks", Set.class, HashSet::new);
+        Set<Location> blockLocations = placedBlocks(arena);
         if (blockLocations.remove(block.getLocation())) {
             return HandlerEventResult.ALLOW;
         }
@@ -181,7 +180,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
         destroyTeamBed(arena, bedOwner);
         MiniGamePlayer mgPlayer = arena.getPlayer(player);
         if (mgPlayer != null) {
-            bedWars.incrementStat("beds_broken", arena, mgPlayer, 1.0d);
+            bedWars.incrementStat("beds_broken", arena, mgPlayer);
         }
         arena.broadcast("The " + bedOwner.get("displayName", String.class, bedOwner.getName()) + " bed has been destroyed!");
         return HandlerEventResult.ALLOW;
@@ -236,7 +235,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
                 for (Player player : arena.getTeamPlayers(winner.getName())) {
                     MiniGamePlayer mgPlayer = arena.getPlayer(player);
                     if (mgPlayer != null) {
-                        bedWars.incrementStat("wins", arena, mgPlayer, 1.0d);
+                        bedWars.incrementStat("wins", arena, mgPlayer);
                     }
                 }
             }
@@ -293,13 +292,6 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
         return arena.getLobbySpawn();
     }
 
-    @Override
-    public Location onPlayerJoinSpectator(MiniGameArena arena, Player player) {
-        Location spectatorSpawn = arena.getSpectatorSpawn();
-        return spectatorSpawn != null ? spectatorSpawn : arena.getLobbySpawn();
-    }
-
-    @Override
     public void onPlayerLeaveArena(MiniGameArena arena, Player player) {
         if (arena.getStatus() == MiniGameArena.ArenaStatus.STARTING
             && (arena.numPlayers() < arena.getMinPlayers() || activeTeamCount(arena) < 2)) {
@@ -393,7 +385,8 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
             return;
         }
 
-        Bukkit.getLogger().warning("[STEMCraft] BedWars arena '" + arena.id() + "' has drop items configured but no valid drop surfaces were found.");
+        java.util.logging.Logger.getLogger(BedWarsArenaHandler.class.getName())
+            .warning("[STEMCraft] BedWars arena '" + arena.id() + "' has drop items configured but no valid drop surfaces were found.");
         broadcastInfoToOccupants(arena, "<yellow>Supply drops are enabled, but this arena has no valid drop surfaces.</yellow>");
     }
 
@@ -409,7 +402,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
             damager = arena.getPlayer(damagerPlayer);
             if (damager != null) {
                 damager.addKill();
-                bedWars.incrementStat("kills", arena, damager, 1.0d);
+                bedWars.incrementStat("kills", arena, damager);
             }
         }
 
@@ -424,7 +417,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
         if (damager != null) {
             int finalKills = damager.get("finalKills", Integer.class, 0) + 1;
             damager.set("finalKills", finalKills);
-            bedWars.incrementStat("final_kills", arena, damager, 1.0d);
+            bedWars.incrementStat("final_kills", arena, damager);
         }
 
         eliminatedSpectators(arena).add(player.getUniqueId());
@@ -450,7 +443,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
 
     private void equipPlayer(MiniGameArena arena, Player player) {
         clearPlayerInventory(player);
-        player.setHealth(Math.min(player.getMaxHealth(), 20.0d));
+        player.setHealth(Math.min(PlayerUtil.getMaxHealth(player), 20.0d));
         player.setFoodLevel(20);
         player.setSaturation(20.0f);
         player.setFireTicks(0);
@@ -467,7 +460,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
 
     private void clearPlayerInventory(Player player) {
         player.getInventory().clear();
-        player.getInventory().setArmorContents(null);
+        player.getInventory().setArmorContents(new ItemStack[0]);
         player.getInventory().setItemInOffHand(null);
         player.updateInventory();
     }
@@ -526,7 +519,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
         int teamSize = teamSize(arena);
         int desiredTeams = Math.max(2, players / 3);
         int requiredTeams = Math.max(2, (players + teamSize - 1) / teamSize);
-        int activeTeams = Math.min(teams.size(), Math.max(desiredTeams, requiredTeams));
+        int activeTeams = Math.clamp(desiredTeams, requiredTeams, teams.size());
         return teams.subList(0, activeTeams);
     }
 
@@ -630,7 +623,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
     }
 
     private void clearPlacedBlocks(MiniGameArena arena) {
-        Set<Location> blocks = arena.getOrCreate("blocks", Set.class, HashSet::new);
+        Set<Location> blocks = placedBlocks(arena);
         for (Location loc : new LinkedHashSet<>(blocks)) {
             loc.getBlock().setType(Material.AIR);
         }
@@ -729,7 +722,7 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
             droppedItem.setPickupDelay(10);
             trackedEntities(arena).add(droppedItem.getUniqueId());
             announceSupplyDrop(arena, dropLocation);
-            playSoundToOccupants(arena, Sound.ENTITY_ITEM_PICKUP, 0.6f, 1.35f);
+            playSoundToOccupants(arena);
             return;
         }
     }
@@ -742,6 +735,11 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
             }
         }
         return null;
+    }
+
+    @SuppressWarnings("unchecked")
+    private @NotNull Set<Location> placedBlocks(@NotNull MiniGameArena arena) {
+        return arena.getOrCreate("blocks", Set.class, HashSet::new);
     }
 
     private boolean containsBedBlock(SCRegion region) {
@@ -801,9 +799,9 @@ public class BedWarsArenaHandler implements MiniGameArenaHandler {
         }
     }
 
-    private void playSoundToOccupants(@NotNull MiniGameArena arena, @NotNull Sound sound, float volume, float pitch) {
+    private void playSoundToOccupants(@NotNull MiniGameArena arena) {
         for (Player occupant : arena.getOccupants()) {
-            occupant.playSound(occupant.getLocation(), sound, volume, pitch);
+            occupant.playSound(occupant.getLocation(), Sound.ENTITY_ITEM_PICKUP, (float) 0.6, (float) 1.35);
         }
     }
 
