@@ -483,13 +483,13 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
         try {
             Files.walkFileTree(root, new SimpleFileVisitor<>() {
                 @Override
-                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                public @NotNull FileVisitResult visitFile(@NotNull Path file, @NotNull BasicFileAttributes attrs) throws IOException {
                     Files.deleteIfExists(file);
                     return FileVisitResult.CONTINUE;
                 }
 
                 @Override
-                public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
+                public @NotNull FileVisitResult postVisitDirectory(@NotNull Path dir, @Nullable IOException exc) throws IOException {
                     Files.deleteIfExists(dir);
                     return FileVisitResult.CONTINUE;
                 }
@@ -613,7 +613,10 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
                 .resolve(safeToken + ".png");
 
             try {
-                Files.createDirectories(dest.getParent());
+                Path parent = dest.getParent();
+                if (parent != null) {
+                    Files.createDirectories(parent);
+                }
                 Files.copy(src, dest, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
             } catch (IOException e) {
                 plugin.getLogger().warning("[resource-pack] Failed to copy bedrock glyph '" + token + "': " + e.getMessage());
@@ -642,7 +645,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
                 .append("|scale=").append(tokenSection.getDouble("bedrock.scale", 1.0d))
                 .append("|yOffset=").append(tokenSection.getInt("bedrock.y_offset", 0));
 
-            int codepoint = parseUnicodeCodepoint(unicode, -1);
+            int codepoint = parseUnicodeCodepoint(unicode);
             if (codepoint >= 0 && codepoint <= 0xFFFF) {
                 String previousOwner = codepointOwners.putIfAbsent(codepoint, token);
                 if (previousOwner != null) {
@@ -731,7 +734,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
         }
 
         String hash = FileUtil.sha1Hex(destination.toFile());
-        return hash == null || hash.isBlank() ? "present" : hash;
+        return hash.isBlank() ? "present" : hash;
     }
 
     private @Nullable Path resolvePackIconFromDataPacks() {
@@ -765,7 +768,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
         if (matchingPacks.size() > 1) {
             plugin.getLogger().warning(
                 "[resource-pack] Multiple data-pack icons found (" + matchingPacks
-                    + "). Using first pack icon from '" + matchingPacks.get(0) + "'."
+                    + "). Using first pack icon from '" + matchingPacks.getFirst() + "'."
             );
         }
 
@@ -833,9 +836,9 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
         return out;
     }
 
-    private int parseUnicodeCodepoint(String value, int fallback) {
+    private int parseUnicodeCodepoint(String value) {
         if (value == null || value.isBlank()) {
-            return fallback;
+            return -1;
         }
 
         String normalized = value.trim();
@@ -843,7 +846,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
             try {
                 return Integer.parseInt(normalized.substring(2), 16);
             } catch (NumberFormatException ignored) {
-                return fallback;
+                return -1;
             }
         }
 
@@ -851,7 +854,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
             try {
                 return Integer.parseInt(normalized.substring(2), 16);
             } catch (NumberFormatException ignored) {
-                return fallback;
+                return -1;
             }
         }
 
@@ -859,7 +862,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
             try {
                 return Integer.parseInt(normalized, 16);
             } catch (NumberFormatException ignored) {
-                return fallback;
+                return -1;
             }
         }
 
@@ -905,9 +908,11 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
             int drawW = src.getWidth();
             int drawH = src.getHeight();
             if (entry.getValue().autoScale()) {
-                int targetHeight = Math.max(1, Math.min(cellSize, entry.getValue().bedrockHeight() > 0
-                    ? entry.getValue().bedrockHeight()
-                    : entry.getValue().javaHeight()));
+                int targetHeight = Math.clamp(
+                    entry.getValue().bedrockHeight() > 0 ? entry.getValue().bedrockHeight() : entry.getValue().javaHeight(),
+                    1,
+                    cellSize
+                );
                 double fit = targetHeight / (double) Math.max(1, src.getHeight());
                 drawW = Math.max(1, (int) Math.round(src.getWidth() * fit));
                 drawH = Math.max(1, (int) Math.round(src.getHeight() * fit));
@@ -927,7 +932,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
             int y = (row * cellSize) + Math.max(0, (cellSize - drawH) / 2) + entry.getValue().yOffset();
             int minY = row * cellSize;
             int maxY = minY + (cellSize - drawH);
-            y = Math.max(minY, Math.min(maxY, y));
+            y = Math.clamp(y, minY, maxY);
 
             BufferedImage glyphImage = scaleBedrockGlyph(src, drawW, drawH);
 
@@ -1055,7 +1060,7 @@ public class ResourcePackServiceImpl extends BaseService implements ResourcePack
     }
 
     private int clampColour(int value) {
-        return Math.max(0, Math.min(255, value));
+        return Math.clamp(value, 0, 255);
     }
 
     private List<File> collectPackConfigFiles(File packDir) {
